--- a/styles/globals.css
+++ b/styles/globals.css
@@ -216,7 +216,7 @@
 .loader6 {
     width: 48px;
     height: 48px;
-    border: 5px solid #FFF;
+    border: 5px solid transparent;
     border-bottom-color: #0677c2;
     border-radius: 50%;
     display: inline-block;
@@ -268,4 +268,891 @@
     right: 0;
     left: unset;
   }
+}
+
+.like-animate{
+  animation: jump 1s ease-in linear;
+}
+
+@keyframes jump {
+  50% {
+    width: 0%;
+  }
+
+  100% {
+    width: 100%;
+  }
+}
+
+
+.spinner {
+  position: relative;
+  width: 80px;
+ /* Adjust the width accordingly */
+  height: 16px;
+ /* Keep the height the same */
+}
+
+.spinner div {
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  background-color: #004dff;
+  border-radius: 50%;
+  animation: spinner-4t3wzl 2s infinite linear;
+}
+
+.spinner div:nth-child(1) {
+  left: 0;
+  animation-delay: 0.15s;
+  background-color: rgba(0, 77, 255, 0.9);
+}
+
+.spinner div:nth-child(2) {
+  left: 25%;
+  animation-delay: 0.3s;
+  background-color: rgba(0, 77, 255, 0.8);
+}
+
+.spinner div:nth-child(3) {
+  left: 50%;
+  animation-delay: 0.45s;
+  background-color: rgba(0, 77, 255, 0.7);
+}
+
+.spinner div:nth-child(4) {
+  left: 75%;
+  animation-delay: 0.6s;
+  background-color: rgba(0, 77, 255, 0.6);
+}
+
+.spinner div:nth-child(5) {
+  left: 100%;
+  animation-delay: 0.75s;
+  background-color: rgba(0, 77, 255, 0.5);
+}
+
+@keyframes spinner-4t3wzl {
+  0% {
+    transform: rotate(0deg) translateX(-100%);
+  }
+
+  100% {
+    transform: rotate(360deg) translateX(-100%);
+  }
+}
+
+.iloader {
+  width: 160px;
+  height: 185px;
+  position: relative;
+  background: #fff;
+  border-radius: 100px 100px 0 0;
+}
+
+.iloader:after {
+  content: "";
+  position: absolute;
+  width: 100px;
+  height: 125px;
+  left: 50%;
+  top: 25px;
+  transform: translateX(-50%);
+  background-image: radial-gradient(circle, #000 48%, transparent 55%),
+    radial-gradient(circle, #000 48%, transparent 55%),
+    radial-gradient(circle, #fff 30%, transparent 45%),
+    radial-gradient(circle, #000 48%, transparent 51%),
+    linear-gradient(#000 20px, transparent 0),
+    linear-gradient(#cfecf9 60px, transparent 0),
+    radial-gradient(circle, #cfecf9 50%, transparent 51%),
+    radial-gradient(circle, #cfecf9 50%, transparent 51%);
+  background-repeat: no-repeat;
+  background-size: 16px 16px, 16px 16px, 10px 10px, 42px 42px, 12px 3px,
+    50px 25px, 70px 70px, 70px 70px;
+  background-position: 25px 10px, 55px 10px, 36px 44px, 50% 30px, 50% 85px,
+    50% 50px, 50% 22px, 50% 45px;
+  animation: faceLift 3s linear infinite alternate;
+}
+
+.iloader:before {
+  content: "";
+  position: absolute;
+  width: 140%;
+  height: 125px;
+  left: -20%;
+  top: 0;
+  background-image: radial-gradient(circle, #fff 48%, transparent 50%),
+    radial-gradient(circle, #fff 48%, transparent 50%);
+  background-repeat: no-repeat;
+  background-size: 65px 65px;
+  background-position: 0px 12px, 145px 12px;
+  animation: earLift 3s linear infinite alternate;
+}
+
+@keyframes faceLift {
+  0% {
+    transform: translateX(-60%);
+  }
+
+  100% {
+    transform: translateX(-30%);
+  }
+}
+
+@keyframes earLift {
+  0% {
+    transform: translateX(10px);
+  }
+
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+/* The switch - the box around the slider */
+.switch2 {
+  font-size: 17px;
+  position: relative;
+  display: inline-block;
+  width: 3em;
+  height: 1.6em;
+  transform-style: preserve-3d;
+  perspective: 500px;
+  animation: toggle__animation 3s infinite;
+}
+
+.switch2::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  filter: blur(30px);
+  z-index: -1;
+  border-radius: 50px;
+  background-color: #ccddff;
+  background-image: radial-gradient(at 21% 46%, hsla(183,65%,60%,1) 0px, transparent 50%),
+radial-gradient(at 23% 25%, hsla(359,74%,70%,1) 0px, transparent 50%),
+radial-gradient(at 20% 1%, hsla(267,83%,75%,1) 0px, transparent 50%),
+radial-gradient(at 86% 87%, hsla(204,69%,68%,1) 0px, transparent 50%),
+radial-gradient(at 99% 41%, hsla(171,72%,77%,1) 0px, transparent 50%),
+radial-gradient(at 55% 24%, hsla(138,60%,62%,1) 0px, transparent 50%);
+}
+
+/* Hide default HTML checkbox */
+.switch2 input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider2 {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #fdfefedc;
+  transition: .4s;
+  border-radius: 30px;
+}
+
+.slider2:before {
+  position: absolute;
+  content: "";
+  height: 1.0em;
+  width: 1.0em;
+  left: 0.3em;
+  bottom: 0.35em;
+  transition: .4s;
+  border-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -10px 10px 0px inset,
+     rgba(0, 0, 0, 0.09) 0px -1px 15px -8px;
+  background-color: #ff99fd;
+  background-image: radial-gradient(at 81% 39%, hsla(327,79%,79%,1) 0px, transparent 50%),
+  radial-gradient(at 11% 72%, hsla(264,64%,79%,1) 0px, transparent 50%),
+  radial-gradient(at 23% 20%, hsla(75,98%,71%,1) 0px, transparent 50%);
+}
+
+.input__check:checked + .slider2 {
+  background-color: #17202A;
+}
+
+.input__check:checked + .slider2:before {
+  transform: translateX(1.5em);
+}
+
+@keyframes toggle__animation {
+  0%, 100% {
+    transform: translateY(-10px) rotateX(15deg) rotateY(-20deg);
+  }
+
+  50% {
+    transform: translateY(0px) rotateX(15deg) rotateY(-20deg);
+  }
+}
+
+
+
+
+.switch {
+  --toggle-size: 1;
+}
+
+.switch *, .switch *::after, *::before {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.switch {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 170px;
+  height: 90px;
+  background-color: #b7cecc;
+  position: relative;
+  border-radius: 999px;
+  -webkit-transition: .4s;
+  -o-transition: .4s;
+  transition: .4s;
+  cursor: pointer;
+  -webkit-transform: scale(var(--toggle-size));
+  -ms-transform: scale(var(--toggle-size));
+  transform: scale(var(--toggle-size));
+}
+
+.moons {
+  position: absolute;
+  width: 100px;
+  height: 65px;
+  overflow: hidden;
+  top: 0;
+  left: -10px;
+}
+
+.moons .star {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  top: 45px;
+  left: 30px;
+  border-radius: 999px;
+  background-color: #ffffff;
+}
+
+.moons .star.star-1 {
+  top: 100%;
+  left: 75px;
+  -webkit-transition: .2s;
+  -o-transition: .2s;
+  transition: .2s;
+}
+
+.moons .star.star-2 {
+  top: 100%;
+  left: 65px;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
+}
+
+.moons .star.star-3 {
+  top: 100%;
+  left: 85px;
+  -webkit-transition: .4s;
+  -o-transition: .4s;
+  transition: .4s;
+}
+
+.moons .star.star-4 {
+  top: 100%;
+  left: 60px;
+  -webkit-transition: .5s;
+  -o-transition: .5s;
+  transition: .5s;
+}
+
+.moons .star.star-5 {
+  top: 100%;
+  left: 44px;
+  -webkit-transition: .6s;
+  -o-transition: .6s;
+  transition: .6s;
+}
+
+.moons .first-moon {
+  position: absolute;
+  -webkit-transition: .4s;
+  -o-transition: .4s;
+  transition: .4s;
+  width: 30px;
+  height: 30px;
+  top: 100%;
+  left: 30px;
+  background-color: #e0d6d6;
+  border-radius: 999px;
+}
+
+.moons::before, .moons::after {
+  -webkit-transition: .6s;
+  -o-transition: .6s;
+  transition: .6s;
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  background-color: #dde4e6;
+  border-radius: 999px;
+  top: 100%;
+  left: 70px;
+}
+
+.moons::after {
+  width: 5px;
+  height: 5px;
+  left: 81px;
+  -webkit-transition: .8s;
+  -o-transition: .8s;
+  transition: .8s;
+}
+
+.sand {
+  position: absolute;
+  width: 100%;
+  height: 45px;
+  bottom: 0px;
+  left: 0;
+  border-radius: 0 0 999px 999px;
+  overflow: hidden;
+}
+
+.suns {
+  position: absolute;
+  width: 50px;
+  height: 70px;
+  overflow: hidden;
+  top: 0;
+  right: 15px;
+}
+
+.suns::before {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: #faddef;
+  border-radius: 999px;
+  top: 10px;
+  right: 30px;
+  -webkit-transition: .4s;
+  -o-transition: .4s;
+  transition: .4s;
+}
+
+.suns::after {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: #F65604;
+  border-radius: 999px;
+  top: 38px;
+  right: 10px;
+  -webkit-transition: .6s;
+  -o-transition: .6s;
+  transition: .6s;
+}
+
+.sand::before {
+  position: absolute;
+  width: 100%;
+  height: 25px;
+  bottom: 0px;
+  left: 0;
+  content: "";
+  background-color: #B69C77;
+  border-radius: 0 0 999px 999px;
+}
+
+.bb8 {
+  position: absolute;
+  left: -18%;
+  width: 140px;
+  -webkit-transform: scale(0.45);
+  -ms-transform: scale(0.45);
+  transform: scale(0.45);
+  -webkit-transition: left .4s;
+  -o-transition: left .4s;
+  transition: left .4s;
+}
+
+.slider {
+  display: none;
+}
+
+.antennas {
+  position: absolute;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  transition: all 0.4s;
+  left: 28%;
+}
+
+.antenna {
+  background: #e0d2be;
+  position: absolute;
+  width: 2px;
+}
+
+.antenna.short {
+  height: 20px;
+  top: -65px;
+  left: 50px;
+}
+
+.antenna.long {
+  border-top: 6px solid #020204;
+  border-bottom: 6px solid #020204;
+  height: 36px;
+  top: -80px;
+  left: 56px;
+}
+
+.head {
+  -webkit-transition: -webkit-transform .4s;
+  transition: -webkit-transform .4s;
+  -o-transition: transform .4s;
+  transition: transform .4s, -webkit-transform .4s;
+  background-color: ghostwhite;
+  border-radius: 90px 90px 25px 25px;
+  -moz-border-radius: 90px 90px 25px 25px;
+  -webkit-border-radius: 90px 90px 25px 25px;
+  height: 63px;
+  margin-left: -45px;
+  overflow: hidden;
+  position: absolute;
+  width: 95px;
+  z-index: 1;
+  top: -56px;
+  left: 56%;
+}
+
+.head .stripe {
+  position: absolute;
+  width: 100%;
+}
+
+.head .stripe.one {
+  background: #7699B7;
+  height: 7px;
+  opacity: 0.8;
+  z-index: 1;
+  top: 3px;
+}
+
+.head .stripe.two {
+  background: #CD7640;
+  height: 4px;
+  top: 14px;
+}
+
+.head .stripe.three {
+  background: #999;
+  height: 4px;
+  opacity: 0.5;
+  bottom: 3px;
+}
+
+.head .stripe.detail {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 200px;
+  bottom: 7px;
+  left: -38%;
+  -webkit-transition: left 0.4s;
+  -o-transition: left 0.4s;
+  transition: left 0.4s;
+}
+
+.head .detail {
+  height: 7px;
+}
+
+.head .detail.zero {
+  background-color: #CD7640;
+  width: 2%;
+  margin-left: 3px;
+}
+
+.head .detail.one {
+  background-color: #CD7640;
+  width: 8%;
+  margin-left: 3px;
+}
+
+.head .detail.two {
+  background-color: #CD7640;
+  width: 6%;
+  margin-left: 5px;
+}
+
+.head .detail.three {
+  background-color: #CD7640;
+  width: 4%;
+  margin-left: 45px;
+  height: 5px;
+  margin-top: 2px;
+}
+
+.head .detail.four {
+  background-color: #CD7640;
+  width: 10%;
+  margin-left: 4px;
+}
+
+.head .detail.five {
+  background-color: #CD7640;
+  width: 2%;
+  margin-left: 3px;
+}
+
+.head .eyes {
+  display: inline-block;
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  -webkit-transition: left 0.4s;
+  -o-transition: left 0.4s;
+  transition: left 0.4s;
+  left: 22%;
+}
+
+.head .eye {
+  border-radius: 50%;
+  display: block;
+  position: absolute;
+}
+
+.head .eye.one {
+  background: #020204;
+  border: 4px solid lightgray;
+  height: 30px;
+  width: 30px;
+  top: 12px;
+  left: 12%;
+}
+
+.head .eye.one:after {
+  background: white;
+  border-radius: 50%;
+  content: "";
+  display: block;
+  height: 3px;
+  position: absolute;
+  width: 3px;
+  top: 4px;
+  right: 4px;
+}
+
+.head .eye.two {
+  background-color: lightgrey;
+  border: 1px solid #020204;
+  height: 16px;
+  width: 16px;
+  top: 30px;
+  left: 40%;
+}
+
+.head .eye.two:after {
+  background: #020204;
+  border-radius: 50%;
+  content: "";
+  display: block;
+  height: 10px;
+  position: absolute;
+  width: 10px;
+  top: 2px;
+  left: 2px;
+}
+
+.ball {
+  background-color: ghostwhite;
+  border-radius: 50%;
+  height: 165px;
+  overflow: hidden;
+  position: relative;
+  width: 165px;
+  -webkit-transition: -webkit-transform .4s;
+  transition: -webkit-transform .4s;
+  -o-transition: transform .4s;
+  transition: transform .4s, -webkit-transform .4s;
+}
+
+.lines {
+  border: 2px solid #B19669;
+  border-radius: 50%;
+  height: 400px;
+  opacity: 0.6;
+  position: absolute;
+  width: 400px;
+}
+
+.lines.two {
+  top: -10px;
+  left: -250px;
+}
+
+.ring {
+  background: #CD7640;
+  border-radius: 50%;
+  height: 70px;
+  margin-left: -35px;
+  position: absolute;
+  width: 70px;
+}
+
+.ring:after {
+  background-color: ghostwhite;
+  border-radius: 50%;
+  content: "";
+  display: block;
+  height: 73%;
+  margin-top: -36%;
+  margin-left: -36%;
+  position: absolute;
+  width: 73%;
+  top: 50%;
+  left: 50%;
+}
+
+.ring.one {
+  margin-left: -40px;
+  height: 90px;
+  width: 100px;
+  top: 2%;
+  left: 42%;
+}
+
+.ring.two {
+  height: 40px;
+  width: 80px;
+  -ms-transform: rotate(50deg);
+  -webkit-transform: rotate(50deg);
+  transform: rotate(50deg);
+  top: 65%;
+  left: 8%;
+}
+
+.ring.two:after {
+  top: 100%;
+}
+
+.ring.three {
+  height: 37px;
+  width: 80px;
+  -ms-transform: rotate(-50deg);
+  -webkit-transform: rotate(-50deg);
+  transform: rotate(-50deg);
+  top: 68%;
+  left: 84%;
+}
+
+.ring.three:after {
+  top: 110%;
+}
+
+.shadow {
+  background: #3A271C;
+  -webkit-box-shadow: 5px 0 50px #3A271C;
+  box-shadow: 5px 0 50px #3A271C;
+  border-radius: 50%;
+  height: 23.3333333333px;
+  opacity: 0.25;
+  position: absolute;
+  width: 110px;
+  left: 28px;
+  z-index: -1;
+  bottom: -8px;
+}
+
+/* actions */
+
+.slider:checked+ .switch .bb8 {
+  left: 29%;
+}
+
+.slider:checked + .switch  .bb8 .ball {
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
+.slider:hover+ .switch .bb8 .eyes {
+  left: 60%;
+}
+
+.slider:checked:hover+ .switch .bb8 .eyes {
+  left: -20%;
+}
+
+.slider:active+ .switch .bb8 .head {
+  -webkit-transform: translate(35px, 3px) rotateZ(17deg);
+  -ms-transform: translate(35px, 3px) rotate(17deg);
+  transform: translate(30px, 3px) rotateZ(17deg);
+}
+
+.slider:checked:active+ .switch .bb8 .head {
+  -webkit-transform: translate(-35px, 6px) rotateZ(-17deg);
+  -ms-transform: translate(-35px, 6px) rotate(-17deg);
+  transform: translate(-35px, 6px) rotateZ(-17deg);
+}
+
+.slider:active+.switch .antennas {
+  -webkit-transform: translate(35px, -20px) rotateZ(17deg);
+  -ms-transform: translate(35px, -20px) rotate(17deg);
+  transform: translate(35px, -20px) rotateZ(17deg);
+}
+
+.slider:active:not(:hover)+.switch .antennas {
+  -webkit-transform: translate(35px, -10px) rotateZ(17deg);
+  -ms-transform: translate(35px, -10px) rotate(17deg);
+  transform: translate(35px, -10px) rotateZ(17deg);
+}
+
+.slider:checked:active+.switch .antennas {
+  -webkit-transform: translate(-35px, 10px) rotateZ(-17deg);
+  -ms-transform: translate(-35px, 10px) rotate(-17deg);
+  transform: translate(-35px, 15px) rotateZ(-17deg);
+}
+
+.slider:checked:active:not(:hover)+.switch .antennas {
+  -webkit-transform: translate(-30px, 20px) rotateZ(-17deg);
+  -ms-transform: translate(-30px, 20px) rotate(-17deg);
+  transform: translate(-25px, 25px) rotateZ(-17deg);
+}
+
+.slider:hover+ .switch .antennas, .slider:checked+ .switch .antennas {
+  left: 6%;
+}
+
+.slider:hover+ .switch .stripe.detail, .slider:checked+ .switch .stripe.detail {
+  left: 0;
+}
+
+.slider:checked:hover+ .switch .antennas {
+  left: 28%;
+}
+
+.slider:checked:hover+ .switch .stripe.detail {
+  left: -38%;
+}
+
+.slider:checked + .switch {
+  background-color: #112350;
+}
+
+.slider:checked + .switch .suns::before {
+  top: 100px;
+}
+
+.slider:checked + .switch .suns::after {
+  top: 150px;
+}
+
+.slider:checked + .switch .moons .first-moon {
+  top: 15px;
+  -webkit-box-shadow: 0 0 10px #B8CCCD;
+  box-shadow: 0 0 10px #B8CCCD;
+}
+
+.slider:checked + .switch .moons::after {
+  top: 38px;
+  -webkit-box-shadow: 0 0 15px #B8CCCD;
+  box-shadow: 0 0 15px #B8CCCD;
+}
+
+.slider:checked + .switch .moons::before {
+  top: 34px;
+  -webkit-box-shadow: 0 0 15px #B8CCCD;
+  box-shadow: 0 0 15px #B8CCCD;
+}
+
+.slider:checked + .switch .moons .star {
+  -webkit-box-shadow: 0 0 20px 2px #fff;
+  box-shadow: 0 0 20px 2px #fff;
+}
+
+.slider:checked + .switch .moons .star.star-1 {
+  top: 20px;
+}
+
+.slider:checked + .switch .moons .star.star-2 {
+  top: 15px;
+}
+
+.slider:checked + .switch .moons .star.star-3 {
+  top: 15px;
+}
+
+.slider:checked + .switch .moons .star.star-4 {
+  top: 45px;
+}
+
+.slider:checked + .switch .moons .star.star-5 {
+  top: 53px;
+}
+
+
+
+.checkbox3 {
+  display: none;
+}
+
+.slider3 {
+  width: 40px;
+  height: 23px;
+  background-color: lightgray;
+  border-radius: 20px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  border: 3px solid transparent;
+  transition: .3s;
+  box-shadow: 0 0 10px 0 rgb(0, 0, 0, 0.25) inset;
+  cursor: pointer;
+}
+
+.slider3::before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  transform: translateX(-18px);
+  border-radius: 20px;
+  transition: .3s;
+  box-shadow: 0 0 10px 3px rgb(0, 0, 0, 0.25);
+}
+
+.checkbox3:checked ~ .slider3::before {
+  transform: translateX(18px);
+  box-shadow: 0 0 10px 3px rgb(0, 0, 0, 0.25);
+}
+
+.checkbox3:checked ~ .slider3 {
+  background-color: #2196F3;
+}
+
+.checkbox3:active ~ .slider3::before {
+  transform: translate(0);
 }
