--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1298,3 +1298,31 @@ radial-gradient(at 55% 24%, hsla(138,60%,62%,1) 0px, transparent 50%);
   line-height: 1rem;
   color: rgba(156, 163, 175, 1);
 }
+
+
+@keyframes popUp {
+  0% {
+    transform: scale(1);
+    opacity: 0;
+  }
+  20%{
+    transform: scale(1.5);
+    opacity: 1;
+  }
+  60%{
+    transform: scale(1.1);
+    opacity: 1;
+  }
+  80% {
+    transform: scale(1.1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0.3);
+    opacity: 0;
+  }
+}
+
+.pop {
+  animation: popUp 1s ease-out;
+}
