--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,8 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
 
+
+
 *{
   box-sizing: border-box;
 }
@@ -11,6 +13,42 @@
   --tw-shadow: 0 4px 6px -1px rgba(33, 150, 243, 0.5), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  text-align: center;
+  background-color: #f2f5f8;
+  padding: 10px;
+}
+
+.message {
+  font-size: 18px;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.link {
+  padding: 12px 24px;
+  background-color: #007bff;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+
+.link:hover {
+  background-color: #0056b3;
+}
+
 
 .loader {
   display: block;
